<resources>
    <string name="app_name">Tripso</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="tag_Login">Login</string>
    <string name="tag_hint_email">Email</string>
    <string name="tag_hint_password">Password</string>
    <string name="Signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="sPassword">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_profile">Profile</string>

    <array name="gender">
        <item name="Mon">Male</item>
        <item name="Tue">Female</item>
        <item name="Wed">Other</item>
    </array>

    <string name="tag_trip_name">Enter Trip Name</string>
    <string name="tag_location_name">Enter Location Name</string>
    <string name="title_activity_frd">FrdActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_friend_profile">FriendProfile</string>
    <string name="title_activity_show_trip">ShowTripActivity</string>


</resources>
