<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.etuloser.padma.rohit.homework09a.SignUp"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/signup_image"
            android:clickable="true"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:border_width="1dp"
            app:border_color="#FF000000"
            android:src="@drawable/avatar_11_raster"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/simageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/signup_image"
                android:layout_alignEnd="@+id/signup_image"
                android:layout_alignRight="@+id/signup_image"
                android:src="@drawable/editimage"
                android:onClick="changeprofileImage"
                />

        </RelativeLayout>
    </LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llsignup"
android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:visibility="invisible"
    >

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/signupdp_progress_bar"
        app:progress_text_size="10sp"
        style="@style/NumberProgressBar_Default"

        />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"


                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_ipl_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_repassword_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_firstname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/sign_up_firstname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:maxLines="1"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_lastname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sspinnergender"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="2"
            >


            <Button
                android:id="@+id/sCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="38dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorAccent"
                android:onClick="sCancel"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/sign_up_register_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="38dp"
                android:background="@color/colorAccent"
                android:onClick="register"
                android:text="@string/register"
                />





        </LinearLayout>

    </LinearLayout>


    </LinearLayout>



</LinearLayout>
