<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.etuloser.padma.rohit.homework09a.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_text_view"
        android:text="Login"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="30dp"
        android:textSize="40sp"
        android:contentDescription="Login" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_ipl_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/tag_hint_email" />

</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_ipl_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/tag_hint_password" />

</android.support.design.widget.TextInputLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_Login"
            android:id="@+id/buttonLogin"
            android:onClick="nLogin"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign UP"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/Signup_button"
            android:onClick="lSignup"
             android:background="@color/colorAccent"
            />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/gLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />
</LinearLayout>
    </LinearLayout>

</LinearLayout>
